dhall/tests/type-inference/failure/unit/AnnotationRecordWrongFieldType.txt
Type error: error: annot mismatch: { x : Natural } != { x : Text }
 --> <current file>:1:0
  |
1 | { x = 1 } : { x : Text }
  | ^^^^^^^^^ annot mismatch: { x : Natural } != { x : Text }
  |
